--- a/tugas_2315091033/linux/CMakeLists.txt
+++ b/tugas_2315091033/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "tugas_2315091033")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.tugas_2315091033")
+set(APPLICATION_ID "com.belajar.tugas_2315091033")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
