--- a/tugas_2315091033/pubspec.yaml
+++ b/tugas_2315091033/pubspec.yaml
@@ -38,6 +38,8 @@ shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobile_scanner: ^3.5.4
+  device_preview: 1.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
